https_proxy/k8s/my-https-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: my-https
spec:
  selector:
    matchLabels:
      app: my-https
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: my-https
    spec:
      containers:
      - name: https-server
        image: mycluster.icp:8500/default/https-server:v1
        ports:
        - containerPort: 443
