https_proxy/k8s/my-https-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: my-https-svc
spec:
  selector:
    app: my-https
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
